# LiDAR_Detection

./: .codecarbon.config  .gitignore  config.yaml  pyproject.toml  questions_todo.txt  requirements.txt
src/: data_exploration.ipynb  pyproject.toml  train.py  utils.py
src/exploration/: data_exploration.ipynb
src/models/: __init__.py  cnn_v1.py  cnn_v1_lightning.py  dataset.py  detect.py  multiboxloss.py  ssd.py  ssd_lightning.py
src/retina/: .codecarbon.config  csv_validation.py  emissions.csv  preprocessing.py  train.py  visualize.py  visualize_images.py
src/retina/retinanet/: csv_eval.py  dataloader.py  losses.py  model.py
src/visualization/: visualize_class_distribution.py  visualize_img_boxes.py
