[project]
name = "ssd_lidar"
authors = [
  { name="Moritz Palm", email="moritz.palm@web.de" },
    { name="Felix Kuhn"}
]
version = "0.1.0"
description = "Object Detection on LiDAR data using a Single Shot Detector"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
source = "https://github.com/MoritzPalm/LiDAR_Detection"